--- a/src/main/resources/templates/ficha_tecnica.html
+++ b/src/main/resources/templates/ficha_tecnica.html
@@ -196,7 +196,7 @@
                         </table>
                     </div>
                     <div class="row" >
-                        <table class="table table-bordered border-dark table-sm" id="tabla3" th:if="${servicio.estado == 'T'}">
+                        <table class="table table-bordered border-dark table-sm" id="tabla3" th:if="${servicio.estado_servicio == 'T'}">
                             <tbody>
                                 <tr th:if="${servicio.tiposervicio == null || (servicio.observacion != null || servicio.observacion == null)}">
                                     <th colspan="4" class="text-center"
@@ -244,7 +244,7 @@
                         </table>
                     </div>
                     <div class="row" >
-                        <table th:if="${servicio.estado == 'T' }" class="table table-bordered border-dark table-sm" id="tabla4" >
+                        <table th:if="${servicio.estado_servicio == 'T' }" class="table table-bordered border-dark table-sm" id="tabla4" >
                             <tbody>
                                 <tr height="70">
                                     <th class="text-center" width="33%">
@@ -274,7 +274,7 @@
                                 </tr>
                             </tbody>
                         </table> 
-                        <table th:if="${servicio.estado == 'A' || servicio.estado == 'AP' || servicio.estado == 'AS' || servicio.estado == 'B'}" class="table table-bordered border-dark table-sm" id="tabla5">
+                        <table th:if="${servicio.estado_servicio == 'A' || servicio.estado_servicio == 'AP' || servicio.estado_servicio == 'AS' || servicio.estado_servicio == 'B'}" class="table table-bordered border-dark table-sm" id="tabla5">
                             <tbody>
                                 <tr height="70">
                                     <th class="text-center" width="50%">
